--- a/Pipfile
+++ b/Pipfile
@@ -18,72 +18,70 @@ sphinx = "*"
 vcrpy = "*"
 
 [packages]
-azure-common = "==1.1.27"
-azure-storage-blob = "==2.1.0"
+azure-common = "==1.1.28"
+azure-storage-blob = "==12.11"
 azure-storage-common = "==2.1.0"
-carto = "==1.11.2"
-celery = "==5.1.2"
+carto = "==1.11.3"
+celery = "==5.2.6"
 cryptography = "<3.4"
 dj-database-url = "==0.5"
 dj-static = "==0.0.6"
-Django = "==3.2.6"
+Django = "<4.0"
 django-admin-extra-urls = "*"
-django-appconf = "==1.0.4"
+django-appconf = "==1.0.5"
 django-celery-beat = "==2.2.1"
 django-celery-email = "==3.0.0"
-django-celery-results = "==2.2"
-django-contrib-comments = "==2.1.0"
-django-cors-headers = "==3.7.0"
-django-debug-toolbar = "==3.2.1"
-django-extensions = "==3.1.3"
-django-easy-pdf3 = "==0.1.2"
-django-filter = "==2.4.0"
-django-fsm = "==2.7.1"
-django-import-export = "==2.5.0"
-django-js-asset = "==1.2.2"
-django-leaflet = "==0.28.1"
-django-logentry-admin = "==1.0.6"
-django-model-utils = "==4.1.1"
-django-ordered-model = "==3.4.3"
-django-post-office = "==3.5.3"
-django-redis-cache = "==3.0"
+django-celery-results = "==2.3.1"
+django-contrib-comments = "==2.2.0"
+django-cors-headers = "==3.11.0"
+django-debug-toolbar = "==3.4"
+django-extensions = "==3.1.5"
+django-easy-pdf3 = "==0.1.4"
+django-filter = "==21.1"
+django-fsm = "==2.8"
+django-import-export = "==2.8.0"
+django-js-asset = "==2.0"
+django-leaflet = "==0.28.2"
+django-logentry-admin = "==1.1"
+django-model-utils = "==4.2"
+django-ordered-model = "==3.5"
+django-post-office = "==3.6"
+django-redis-cache = "==3.0.1"
 django-rest-swagger = "==2.2"
-django-storages = {extras = ["azure"],version = "==1.11.1"}
-django-tenants = "==3.3.2"
-django-timezone-field = "==4.2.1"
-django-waffle = "==2.1.0"
+django-storages = {extras = ["azure"],version = "==1.12.3"}
+django-tenants = "==3.4.2"
+django-timezone-field = "<5.0"
+django-waffle = "==2.4.1"
 djangorestframework-csv = "==2.1.1"
-djangorestframework-gis = "==0.17"
-djangorestframework-simplejwt = "==4.8"
+djangorestframework-gis = "==1.0"
+djangorestframework-simplejwt = "==5.1"
 djangorestframework-recursive = "==0.1.2"
 djangorestframework-xml = "==2.0.0"
-djangorestframework = "==3.12.4"
-drf-nested-routers = "==0.93.3"
+djangorestframework = "==3.13.1"
+drf-nested-routers = "==0.93.4"
 drf-querystringfilter = "==1.0.0"
 etools-validator = "==0.5.0"
-flower = "==0.9.5"  # issue when locking
+flower = "==1.0"
 GDAL = "==3.0.2"
-gunicorn = "<20.0"
+gunicorn = "==20.1"
 newrelic = "*"
-Pillow = "==8.1.0"
-psycopg2-binary = "==2.9.1"
+Pillow = "==9.1.0"
+psycopg2-binary = "==2.9.3"
 sentry-sdk = "*"
-requests = "==2.26"
+requests = "==2.27.1"
 social-auth-app-django = "==5.0"
-social-auth-core = {extras = ["azuread"],version = "==4.1"}
-tenant-schemas-celery = "==1.0.1"
-unicef-attachments = "==0.10.1"
+social-auth-core = {extras = ["azuread"],version = "==4.2"}
+tenant-schemas-celery = "==2.0.0"
+unicef-attachments = "==0.11"
 unicef-djangolib = "==0.5.4"
 unicef-locations = "==4.0.1"
 unicef-notification = "==1.1"
 unicef-restlib = "==0.7"
-unicef-snapshot = "==1.1"
-unicef-rest-export = "==0.5.3"
-xhtml2pdf = "==0.2.5"
+unicef-snapshot = "==1.2"
+unicef-rest-export = "==0.6"
+xhtml2pdf = "==0.2.7"
 unicef-vision = "==0.6"
 etools-offline = "==0.1.0"
-openpyxl = "==3.0.5"
-pyyaml = "==5.4.1"
 
 reportlab = "==3.6.6"  # freeze: getStringIO from 'reportlab.lib.utils'
 
