--- a/Pipfile
+++ b/Pipfile
@@ -77,6 +77,7 @@ unicef-djangolib = "==0.5.4"
 unicef-locations = "==4.0.1"
 unicef-notification = "==1.1"
 unicef-restlib = "==0.7"
+unicef-security = "==1.1"
 unicef-snapshot = "==1.2"
 unicef-rest-export = "==0.6"
 xhtml2pdf = "==0.2.7"
