--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -31,7 +31,7 @@ RUN apk add --no-cache --virtual .build-deps --update \
 
 RUN pip install --no-cache-dir --upgrade \
     pip \
-    pipenv
+    pipenv==2022.10.4
 
 
 WORKDIR /etools/
