use allowlist_externals instead of whitelist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
    CPLUS_INCLUDE_PATH=/usr/include/gdal
    C_INCLUDE_PATH=/usr/include/gdal
 
-whitelist_externals = pipenv
+allowlist_externals = pipenv
 
 commands =
         pip install "setuptools<58.0"
