--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ vcrpy = "*"
 
 [packages]
 azure-common = "==1.1.27"
-azure-storage-blob = "==2.1.0"
+azure-storage-blob = "==12.16.0"
 azure-storage-common = "==2.1.0"
 carto = "==1.11.2"
 celery = "==5.2.3"
@@ -43,12 +43,11 @@ django-import-export = "==3.2.0"
 django-js-asset = "==1.2.2"
 django-leaflet = "==0.28.1"
 django-logentry-admin = "==1.1.0"
-django-model-utils = "==4.1.1"
+django-model-utils = "==4.3.1"
 django-ordered-model = "==3.4.3"
 django-post-office = "==3.7.0"
 django-redis-cache = "==3.0"
 django-rest-swagger = "==2.2"
-django-storages = {extras = ["azure"],version = "==1.11.1"}
 django-tenants = "==3.5.0"
 django-timezone-field = "==5.1"
 django-waffle = "==2.1.0"
@@ -85,6 +84,7 @@ unicef-snapshot = "==1.3"
 unicef-rest-export = "==0.5.3"
 unicef-vision = "==0.6"
 xhtml2pdf = "==0.2.5"
+django-storages = {version = "==1.13.2", extras = ["azure"]}
 
 [requires]
 python_version = "3.9"
