--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ allowlist_externals =
         sh
 
 commands =
-        pip install "setuptools<58.0"
+        pip install "setuptools<59.7.0,>=59.1.1"
         pipenv install --dev --ignore-pipfile
 
 [testenv:d32]
