--- a/Pipfile
+++ b/Pipfile
@@ -64,6 +64,7 @@ etools-validator = "==0.5.0"
 flower = "==1.2.0"  # issue when locking
 GDAL = "==3.0.2"
 gunicorn = "<20.0"
+jsonschema = "*"
 newrelic = "*"
 Pillow = "==9.3.0"
 psycopg2-binary = "==2.9.1"
