--- a/Pipfile
+++ b/Pipfile
@@ -13,78 +13,77 @@ isort = "*"
 ipython = "*"
 pdbpp = "*"
 tox = "*"
-factory-boy = ">=2.11"
+factory-boy = "*"
 sphinx = "*"
 vcrpy = "*"
 
 [packages]
-azure-common = "==1.1.27"
-azure-storage-blob = "==12.16.0"
-azure-storage-common = "==2.1.0"
-carto = "==1.11.2"
-celery = "==5.2.3"
-cryptography = "<3.4"
-dj-database-url = "==0.5"
-dj-static = "==0.0.6"
+azure-common = "*"
+azure-storage-blob = "*"
+azure-storage-common = "*"
+carto = "*"
+celery = "*"
+cryptography = "*"
+dj-database-url = "*"
+dj-static = "*"
 Django = "==4.2.3"
 django-admin-extra-urls = "*"
-django-appconf = "==1.0.4"
-django-celery-beat = "==2.5.0"
-django-celery-email = "==3.0.0"
-django-celery-results = "==2.4.0"
-django-contrib-comments = "==2.1.0"
-django-cors-headers = "==3.7.0"
-django-debug-toolbar = "==3.2.1"
-django-extensions = "==3.1.3"
-django-easy-pdf3 = "==0.1.4"
-django-filter = "==2.4.0"
-django-fsm = "==2.7.1"
-django-import-export = "==3.2.0"
-django-js-asset = "==1.2.2"
-django-leaflet = "==0.28.1"
-django-logentry-admin = "==1.1.0"
-django-model-utils = "==4.3.1"
-django-ordered-model = "==3.4.3"
-django-post-office = "==3.7.0"
-django-redis-cache = "==3.0"
-django-rest-swagger = "==2.2"
+django-appconf = "*"
+django-celery-beat = "*"
+django-celery-email = "*"
+django-celery-results = "*"
+django-contrib-comments = "*"
+django-cors-headers = "*"
+django-debug-toolbar = "*"
+django-extensions = "*"
+django-easy-pdf3 = "*"
+django-filter = "*"
+django-fsm = "*"
+django-import-export = "*"
+django-js-asset = "*"
+django-leaflet = "*"
+django-logentry-admin = "*"
+django-model-utils = "*"
+django-ordered-model = "*"
+django-post-office = "*"
+django-redis-cache = "*"
+django-rest-swagger = "*"
 django-storages = {version = "==1.13.2", extras = ["azure"]}
-django-tenants = "==3.5.0"
-django-timezone-field = "==5.1"
-django-waffle = "==2.1.0"
-djangorestframework-csv = "==2.1.1"
-djangorestframework-gis = "==1.0"
-djangorestframework-simplejwt = "==4.8"
-djangorestframework-recursive = "==0.1.2"
-djangorestframework-xml = "==2.0.0"
-djangorestframework = "==3.14.0"
-drf-nested-routers = "==0.93.3"
-drf-querystringfilter = "==1.0.0"
-etools-validator = "==0.5.0"
-etools-offline = "==0.1.0"
-flower = "==1.2.0"  # issue when locking
-GDAL = "==3.0.2"
+django-tenants = "*"
+django-timezone-field = "*"
+django-waffle = "*"
+djangorestframework-csv = "*"
+djangorestframework-gis = "*"
+djangorestframework-simplejwt = "*"
+djangorestframework-recursive = "*"
+djangorestframework-xml = "*"
+djangorestframework = "*"
+drf-nested-routers = "*"
+drf-querystringfilter = "*"
+etools-validator = "*"
+etools-offline = "*"
+flower = "*"
 gunicorn = "<20.0"
 newrelic = "*"
-openpyxl = "==3.0.5"
-pyyaml = "==5.3.1"
-Pillow = "==9.3.0"
-psycopg2-binary = "==2.9.1"
-reportlab = "==3.6.6"  # freeze: getStringIO from 'reportlab.lib.utils'
+openpyxl = "*"
+pyyaml = "*"
+Pillow = "*"
+psycopg2-binary = "*"
+reportlab = "*"
 sentry-sdk = "*"
-requests = "==2.26"
-social-auth-app-django = "==5.0"
+requests = "*"
+social-auth-app-django = "*"
 social-auth-core = {extras = ["azuread"],version = "==4.1"}
-tenant-schemas-celery = "==1.0.1"
-unicef-attachments = "==0.11"
-unicef-djangolib = "==0.5.4"
-unicef-locations = "==4.2"
-unicef-notification = "==1.1"
-unicef-restlib = "==0.7"
-unicef-snapshot = "==1.3"
-unicef-rest-export = "==0.5.3"
-unicef-vision = "==0.6"
-xhtml2pdf = "==0.2.5"
+tenant-schemas-celery = "*"
+unicef-attachments = "*"
+unicef-djangolib = "*"
+unicef-locations = "*"
+unicef-notification = "*"
+unicef-restlib = "*"
+unicef-snapshot = "*"
+unicef-rest-export = "*"
+unicef-vision = "*"
+msal = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.12"
