--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = d{42}
 
 [testenv]
-basepython=python3.9
+basepython=python312
 passenv = *
 
 extras=test
@@ -13,12 +13,12 @@ setenv =
    C_INCLUDE_PATH=/usr/include/gdal
 
 allowlist_externals =
-        pipenv
+        pdm
         sh
 
 commands =
-        pip install "setuptools<58.0"
-        pipenv install --dev --ignore-pipfile
+        pip install pdm
+        pdm sync
 
 [testenv:d42]
 commands =
