--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
       - run:
           name: Update PATH Environment Variable
           command: |
-            echo 'export PATH=$PATH:/etools/__pypackages__/3.12/bin' >> $BASH_ENV
+            echo 'export PATH=${PATH}:/etools/__pypackages__/3.12/bin' >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: Run Tests
