/etools/__pypackages__/3.12/bin/tox -e d42,report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,6 @@ jobs:
           PGHOST: 127.0.0.1
           DATABASE_URL: "postgis://postgres:postgres@localhost:5432/circle_test"
           DEPLOY_BRANCHES: "develop|staging|master|ci-updates2"
-          PATH: "/etools/__pypackages__/3.12/bin:${PATH}"
       - image: cimg/postgres:12.9-postgis
         environment:
           POSTGRES_USER: postgres
@@ -67,7 +66,7 @@ jobs:
           name: Run Tests
           command: |
             pip install tox
-            tox -e d42,report
+            /etools/__pypackages__/3.12/bin/tox -e d42,report
           no_output_timeout: 30m
       - save_cache:
           key: deps2-{{ .Branch }}--{{ checksum "pdm.lock" }}-{{ checksum ".circleci/config.yml" }}
