/etools/__pypackages__/3.12/bin/coverage html

--- a/tox.ini
+++ b/tox.ini
@@ -29,4 +29,4 @@ commands =
 [testenv:report]
 commands =
     pip install coverage
-    coverage html
+    /etools/__pypackages__/3.12/bin/coverage html
