add allowlist externals

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
     sh ./runtests.sh
 
 [testenv:report]
+allowlist_externals = /etools/__pypackages__/3.12/bin/coverage
 commands =
     pip install coverage
     /etools/__pypackages__/3.12/bin/coverage html
