--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dependencies = [
     "etools-validator",
     "etools-offline",
     "flower",
-    "gunicorn<20.0",
+    "gunicorn",
     "newrelic",
     "openpyxl",
     "pyyaml",
