--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,26 @@
 [tox]
-envlist = d{42}
+envlist = d42,report
 
 [testenv]
-basepython=python312
+basepython = python3.12
 passenv = *
-
-extras=test
-
-# Need some env vars set before trying to compile GDAL
+extras = test
 setenv =
-   CPLUS_INCLUDE_PATH=/usr/include/gdal
-   C_INCLUDE_PATH=/usr/include/gdal
-
+    CPLUS_INCLUDE_PATH = /usr/include/gdal
+    C_INCLUDE_PATH = /usr/include/gdal
 allowlist_externals =
-        pdm
-        sh
-
+    pdm
+    sh
 commands =
-        pip install pdm
-        pdm sync
+    pdm sync
 
 [testenv:d42]
 commands =
-    {[testenv]commands}
-    pip install "django==4.2.*"
+    pdm sync
     sh ./runtests.sh
 
 [testenv:report]
 allowlist_externals = /etools/__pypackages__/3.12/bin/coverage
 commands =
-    pip install coverage
+    pdm sync
     /etools/__pypackages__/3.12/bin/coverage html
