--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ jobs:
                 --data revision=$CIRCLE_SHA1 \
                 https://circleci.com/api/v1.1/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/tree/$CIRCLE_BRANCH
   test:
+    parallelism: 4  # Number of containers to spread the tests across
     working_directory: ~/code
-    # The primary container is an instance of the first list image listed. Your build commands run in this container.
     docker:
       - image: unicef/etools-base:${BASE_TAG}
         environment:
@@ -63,10 +63,10 @@ jobs:
       - restore_cache:
           key: deps2-{{ .Branch }}--{{ checksum "pdm.lock" }}-{{ checksum ".circleci/config.yml" }}
       - run:
-          name: Run Tests
+          name: Run Tests in Parallel
           command: |
             pip install tox
-            /etools/__pypackages__/3.12/bin/tox -e d42,report
+            /etools/__pypackages__/3.12/bin/tox -e d42 -- --tests-per-worker auto
           no_output_timeout: 30m
       - save_cache:
           key: deps2-{{ .Branch }}--{{ checksum "pdm.lock" }}-{{ checksum ".circleci/config.yml" }}
