--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,11 +146,12 @@ jobs:
 
 workflows:
   version: 2
-  tests_start:
-    jobs:
-      - setup
+#  tests_start:
+#    jobs:
+#      - setup
   test_and_deploy:
     jobs:
+      - setup
       - code_checks
       - test:
           requires:
