--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ dependencies = [
     "social-auth-app-django",
     "social-auth-core[azuread]==4.5.4",
     "tenant-schemas-celery",
-    "unicef-attachments @ git+https://github.com/unicef/unicef-attachments.git@dj4.2-ch32786",
+    "unicef-attachments @ git+https://github.com/unicef/unicef-attachments.git@b720a3ef26e3320a559f72ed1918c798dd2d7b67",
     "unicef-djangolib",
     "unicef-locations",
     "unicef-notification",
