--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ dependencies = [
     'pyyaml==6.0.1',
     'reportlab==4.0.9',
     'requests==2.31.0',
-    'sentry-sdk==2.1.1',
+    "sentry-sdk==1.27.0",
     'social-auth-app-django==5.4.1',
     "social-auth-core[azuread]==4.5.4",
     'tenant-schemas-celery==2.2.0',
