--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,6 @@ dependencies = [
     'django-celery-results==2.5.1',
     'django-contrib-comments==2.2.0',
     'django-cors-headers==4.3.1',
-    'django-debug-toolbar==4.3.0',
     'django-easy-pdf3==0.1.4',
     'django-extensions==3.2.3',
     'django-filter==24.2',
@@ -77,6 +76,7 @@ dependencies = [
     "gdal==3.8.5",
     "jsonschema>=4.22.0",
     "setuptools>=70.1.1",
+    "django-debug-toolbar==4.2.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
