--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ dependencies = [
     "jsonschema>=4.22.0",
     "setuptools>=70.1.1",
     "django-debug-toolbar==4.2.0",
+    "tblib>=3.0.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
