--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 
 parameters:
   base-tag:
@@ -33,15 +33,6 @@ jobs:
                 echo "Not a followed branch not pushing latest"
               fi
             fi
-      - run:
-          name: Triggering test workflow
-          command: |
-            BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
-            curl --user ${CIRCLE_TOKEN}: \
-                --data build_parameters[CIRCLE_JOB]=test \
-                --data build_parameters[BASE_TAG]=${BASE_TAG} \
-                --data revision=$CIRCLE_SHA1 \
-                https://circleci.com/api/v1.1/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/tree/$CIRCLE_BRANCH
   test:
     working_directory: ~/code
     # The primary container is an instance of the first list image listed. Your build commands run in this container.
@@ -72,17 +63,6 @@ jobs:
           key: deps2-{{ .Branch }}--{{ checksum "pdm.lock" }}-{{ checksum ".circleci/config.yml" }}
           paths:
             - ".tox/d42/"
-      - run:
-          name: Triggering build_and_deploy job
-          command: |
-            if (echo "$DEPLOY_BRANCHES" | grep -q "$CIRCLE_BRANCH"); then
-              curl --user ${CIRCLE_TOKEN}: \
-                --data build_parameters[CIRCLE_JOB]=build_and_upload \
-                --data revision=$CIRCLE_SHA1 \
-                https://circleci.com/api/v1.1/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/tree/$CIRCLE_BRANCH
-            else
-              echo "not triggered - '$CIRCLE_BRANCH' is not a deployable branch: '$DEPLOY_BRANCHES'"
-            fi
 
   build_and_upload:
     machine: true
@@ -113,15 +93,28 @@ jobs:
             else
               echo "Not a followed branch not pushing latest"
             fi
-      - run:
-          name: trigger redeploy?
-          command: |
-            pip install requests
-            python utils/trigger_redeploy.py --loglevel=INFO
-
 
 workflows:
-  version: 2
-  tests_start:
+  version: 2.1
+
+  #Run tests on all PRs always but not on merges.
+  run-tests-on-pr:
+    when:
+      equal: [ true, << pipeline.git.pull_request >> ]
     jobs:
       - setup
+      - test
+
+  # Build only on merges to develop, staging and master. Don't run the tests here.
+  deploy-on-merge:
+    when:
+      not:
+        equal: [ true, << pipeline.git.pull_request >> ]
+    jobs:
+      - build_and_upload:
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
