Remove unsupported variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,12 @@ jobs:
       - run:
           name: Run Tests
           command: |
-            pip install tox
-            /etools/__pypackages__/3.12/bin/tox -e d42
+            if [ ! -z "$CIRCLE_PULL_REQUEST" ]; then  #Only run tests on PRs
+              pip install tox
+              /etools/__pypackages__/3.12/bin/tox -e d42
+            else
+              echo "Not a pull request. Skipping test job trigger."
+            fi
           no_output_timeout: 30m
       - save_cache:
           key: deps2-{{ .Branch }}--{{ checksum "pdm.lock" }}-{{ checksum ".circleci/config.yml" }}
@@ -71,27 +75,36 @@ jobs:
       - run:
           name: Building the image
           command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
-            TAG=${CIRCLE_BRANCH}
-            (docker pull unicef/etools-base:${BASE_TAG}) ||
-            (docker build -t unicef/etools-base:${BASE_TAG} -f Dockerfile-base . && docker push unicef/etools-base:${BASE_TAG})
-            docker build --build-arg BASE_TAG=${BASE_TAG} -t unicef/etools:$TAG .
+            if [ -z "$CIRCLE_PULL_REQUEST" ]; then  #Only run if it's a push, not a PR
+              docker login -u $DOCKER_USER -p $DOCKER_PASS
+              BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
+              TAG=${CIRCLE_BRANCH}
+              (docker pull unicef/etools-base:${BASE_TAG}) ||
+              (docker build -t unicef/etools-base:${BASE_TAG} -f Dockerfile-base . && docker push unicef/etools-base:${BASE_TAG})
+              docker build --build-arg BASE_TAG=${BASE_TAG} -t unicef/etools:$TAG .
+            else
+              echo "PR detected. Skipping build_and_upload job."
+            fi
       - run:
           name: Pushing to Docker Hub
           command: |
-            TAG=${CIRCLE_BRANCH}
-            BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            docker push unicef/etools:$TAG
-            if (echo "develop" | grep -q "$CIRCLE_BRANCH"); then
-              docker tag unicef/etools-base:${BASE_TAG} unicef/etools-base:latestet
-              docker push unicef/etools-base:latestet
-            elif (echo "master" | grep -q "$CIRCLE_BRANCH"); then
-              docker tag unicef/etools-base:${BASE_TAG} unicef/etools-base:latest_prodet
-              docker push unicef/etools-base:latest_prodet
+            if [ -z "$CIRCLE_PULL_REQUEST" ]; then  #Only run if it's a push, not a PR
+
+              TAG=${CIRCLE_BRANCH}
+              BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
+              docker login -u $DOCKER_USER -p $DOCKER_PASS
+              docker push unicef/etools:$TAG
+              if (echo "develop" | grep -q "$CIRCLE_BRANCH"); then
+                docker tag unicef/etools-base:${BASE_TAG} unicef/etools-base:latestet
+                docker push unicef/etools-base:latestet
+              elif (echo "master" | grep -q "$CIRCLE_BRANCH"); then
+                docker tag unicef/etools-base:${BASE_TAG} unicef/etools-base:latest_prodet
+                docker push unicef/etools-base:latest_prodet
+              else
+                echo "Not a followed branch not pushing latest"
+              fi
             else
-              echo "Not a followed branch not pushing latest"
+              echo "PR detected. Skipping build_and_upload job."
             fi
 
 workflows:
@@ -99,17 +112,12 @@ workflows:
 
   #Run tests on all PRs always but not on merges.
   run-tests-on-pr:
-    when:
-      equal: [ true, << pipeline.git.pull_request >> ]
     jobs:
       - setup
       - test
 
   # Build only on merges to develop, staging and master. Don't run the tests here.
   deploy-on-merge:
-    when:
-      not:
-        equal: [ true, << pipeline.git.pull_request >> ]
     jobs:
       - build_and_upload:
           filters:
