--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Run Tests
           command: |
-            if [ ! -z "$CIRCLE_PULL_REQUEST" ]; then  #Only run tests on PRs
+            if [[ "$CIRCLE_COMPARE_URL" == *pull/* ]]; then #Only run tests on PRs
               pip install tox
               /etools/__pypackages__/3.12/bin/tox -e d42
             else
@@ -85,7 +85,7 @@ jobs:
       - run:
           name: Building the image
           command: |
-            if [ -z "$CIRCLE_PULL_REQUEST" ]; then  #Only run if it's a push, not a PR
+            if [[ ! "$CIRCLE_COMPARE_URL" == *pull/* ]]; then #Only run if it's a push, not a PR
               docker login -u $DOCKER_USER -p $DOCKER_PASS
               BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
               TAG=${CIRCLE_BRANCH}
@@ -98,8 +98,7 @@ jobs:
       - run:
           name: Pushing to Docker Hub
           command: |
-            if [ -z "$CIRCLE_PULL_REQUEST" ]; then  #Only run if it's a push, not a PR
-
+            if [[ ! "$CIRCLE_COMPARE_URL" == *pull/* ]]; then #Only run if it's a push, not a PR
               TAG=${CIRCLE_BRANCH}
               BASE_TAG="$(md5sum pdm.lock | cut -c1-6)$(md5sum Dockerfile-base | cut -c1-6)"
               docker login -u $DOCKER_USER -p $DOCKER_PASS
@@ -117,16 +116,26 @@ jobs:
               echo "PR detected. Skipping build_and_upload job."
             fi
 
+  print_env:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run:
+          name: Print All CircleCI Environment Variables
+          command: |
+            echo "🔍 CircleCI Environment Variables:"
+            env | sort
+
 workflows:
   version: 2.1
 
   #Run tests on all PRs always but not on merges.
-  run-tests-on-pr:
+  run_tests_on_pr:
     jobs:
       - setup
 
   # Build only on merges to develop, staging and master. Don't run the tests here.
-  deploy-on-merge:
+  build_on_merge:
     jobs:
       - build_and_upload:
           filters:
@@ -135,3 +144,12 @@ workflows:
                 - develop
                 - staging
                 - master
+
+  # Temporary, only to debug
+  debug_env_vars:
+    jobs:
+      - print_env:
+          filters:
+            branches:
+              only:
+                - develop
