--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ dependencies = [
     'unicef-restlib==0.7',
     'unicef-snapshot==1.3',
     'unicef-vision==0.6',
-#    "gdal==3.8.5",
+    "gdal==3.8.5",
     "jsonschema>=4.22.0",
     "setuptools>=70.1.1",
     "django-debug-toolbar==4.2.0",
