--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
         environment:
           PGHOST: 127.0.0.1
           DATABASE_URL: "postgis://postgres:postgres@localhost:5432/circle_test"
-          DEPLOY_BRANCHES: "develop|staging|master|gddd"
+          DEPLOY_BRANCHES: "develop|staging|master|ch39409-backend"
       - image: cimg/postgres:12.9-postgis
         environment:
           POSTGRES_USER: postgres
