Renaming migration for running in dev

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ coverage.xml
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
+
+check-messages.sh
+fix-messages.sh
