Update kombu to 5.4.0 and ignore .pdm-python

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ src/etools/config/settings/custom.py
 coverage.xml
 .venv/
 **/{'workspace': 'ZZZ'}*
+.pdm-python
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
