--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ dependencies = [
     "setuptools>=70.1.1",
     "django-debug-toolbar==4.2.0",
     "tblib>=3.0.0",
+    "kombu==5.4.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
