Improves on location export

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,3 +123,4 @@ workflows:
                 - staging
                 - master
                 - ch39409-backend
+                - LMSM_Improve_export_locations
